layer assignment almost done need to fix the cases where we create a dummy on a node in the middle

--- a/DV Project.ipynb
+++ b/DV Project.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 153,
    "id": "02208ea2",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 154,
    "id": "012697bc",
    "metadata": {},
    "outputs": [],
@@ -81,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 155,
    "id": "ddc8e486",
    "metadata": {},
    "outputs": [],
@@ -92,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 156,
    "id": "28e4b020",
    "metadata": {},
    "outputs": [],
@@ -103,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 157,
    "id": "87664853",
    "metadata": {},
    "outputs": [],
@@ -114,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 158,
    "id": "9891ce29",
    "metadata": {},
    "outputs": [],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 159,
    "id": "54136003",
    "metadata": {},
    "outputs": [],
@@ -239,7 +239,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 160,
    "id": "f4cadf37",
    "metadata": {},
    "outputs": [],
@@ -324,7 +324,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 161,
    "id": "e4dbb945",
    "metadata": {},
    "outputs": [],
@@ -353,7 +353,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 162,
    "id": "81296203",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 163,
    "id": "e36c4791",
    "metadata": {},
    "outputs": [],
@@ -465,7 +465,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 164,
    "id": "339b0b7a",
    "metadata": {},
    "outputs": [],
@@ -504,7 +504,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 165,
    "id": "ab951e04",
    "metadata": {},
    "outputs": [],
@@ -561,7 +561,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 166,
    "id": "531f0bbf",
    "metadata": {},
    "outputs": [],
@@ -599,7 +599,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 167,
    "id": "ae07df2d",
    "metadata": {},
    "outputs": [],
@@ -652,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 168,
    "id": "a0067606",
    "metadata": {},
    "outputs": [],
@@ -757,7 +757,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 169,
    "id": "01394dc8",
    "metadata": {},
    "outputs": [],
@@ -789,7 +789,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 170,
    "id": "0ed4202a",
    "metadata": {},
    "outputs": [],
@@ -805,7 +805,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 171,
    "id": "79938a94",
    "metadata": {},
    "outputs": [],
@@ -858,7 +858,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 172,
    "id": "d0b46f68",
    "metadata": {},
    "outputs": [],
@@ -931,7 +931,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 173,
    "id": "283a02bc",
    "metadata": {},
    "outputs": [],
@@ -1020,7 +1020,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 174,
    "id": "4174aa99",
    "metadata": {},
    "outputs": [],
@@ -1047,7 +1047,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 175,
    "id": "882a3216",
    "metadata": {},
    "outputs": [],
@@ -1073,7 +1073,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 176,
    "id": "6ba84240",
    "metadata": {},
    "outputs": [],
@@ -1083,7 +1083,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 177,
    "id": "683af054",
    "metadata": {},
    "outputs": [],
@@ -1118,7 +1118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 178,
    "id": "82f750ec",
    "metadata": {},
    "outputs": [],
@@ -1128,7 +1128,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 179,
    "id": "fcee79f0",
    "metadata": {},
    "outputs": [],
@@ -1138,7 +1138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 180,
    "id": "0def8015",
    "metadata": {},
    "outputs": [],
@@ -1165,7 +1165,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 181,
    "id": "d5807ae7",
    "metadata": {},
    "outputs": [],
@@ -1184,7 +1184,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 182,
    "id": "33b3f74d",
    "metadata": {},
    "outputs": [],
@@ -1194,7 +1194,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 183,
    "id": "0bc6b879",
    "metadata": {},
    "outputs": [],
@@ -1213,7 +1213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 184,
    "id": "74ad8784",
    "metadata": {},
    "outputs": [],
@@ -1223,7 +1223,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 185,
    "id": "1d0f7ea1",
    "metadata": {},
    "outputs": [],
@@ -1233,7 +1233,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 186,
    "id": "e64e3762",
    "metadata": {},
    "outputs": [],
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 187,
    "id": "fd3c8a60",
    "metadata": {},
    "outputs": [],
@@ -1283,7 +1283,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 188,
    "id": "a6f56736",
    "metadata": {},
    "outputs": [],
@@ -1375,7 +1375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 189,
    "id": "f0e3ca8c",
    "metadata": {},
    "outputs": [],
@@ -1396,7 +1396,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 190,
    "id": "4934fa5a",
    "metadata": {},
    "outputs": [],
@@ -1417,7 +1417,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 191,
    "id": "d0515192",
    "metadata": {},
    "outputs": [],
@@ -1437,7 +1437,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 192,
    "id": "91d01854",
    "metadata": {},
    "outputs": [],
@@ -1466,7 +1466,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 193,
    "id": "46c10d4b",
    "metadata": {},
    "outputs": [],
@@ -1487,7 +1487,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 194,
    "id": "c9268985",
    "metadata": {},
    "outputs": [],
@@ -1508,7 +1508,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 195,
    "id": "5c9032b3",
    "metadata": {},
    "outputs": [],
@@ -1520,7 +1520,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 196,
    "id": "ec739679",
    "metadata": {},
    "outputs": [],
@@ -1548,7 +1548,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 197,
    "id": "980ce08a",
    "metadata": {},
    "outputs": [],
@@ -1569,7 +1569,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 198,
    "id": "9699da96",
    "metadata": {},
    "outputs": [],
@@ -1590,7 +1590,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 199,
    "id": "6ce9c28e",
    "metadata": {},
    "outputs": [],
@@ -1619,7 +1619,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 200,
    "id": "9313a64b",
    "metadata": {},
    "outputs": [],
@@ -1640,7 +1640,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 201,
    "id": "c7e46570",
    "metadata": {},
    "outputs": [],
@@ -1660,7 +1660,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 202,
    "id": "c01a22fb",
    "metadata": {},
    "outputs": [],
@@ -1681,7 +1681,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 203,
    "id": "b43bc3ef",
    "metadata": {},
    "outputs": [],
@@ -1699,7 +1699,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 204,
    "id": "04e25649",
    "metadata": {},
    "outputs": [],
@@ -1788,8 +1788,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "19c96044",
+   "metadata": {},
+   "source": [
+    "### Resolve Cycles"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 205,
    "id": "df4f72d6",
    "metadata": {},
    "outputs": [],
@@ -1836,7 +1844,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 206,
    "id": "489cc07f",
    "metadata": {},
    "outputs": [],
@@ -1852,7 +1860,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 207,
    "id": "f9332533",
    "metadata": {},
    "outputs": [],
@@ -1940,62 +1948,155 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "29263b50",
+   "metadata": {},
+   "source": [
+    "### Layer Assignment"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 208,
    "id": "ed08eaa0",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[['2', '7', '12'], ['4', '5', '11'], ['3', '6', '9', '10'], ['1', '8']]\n"
-     ]
+     "data": {
+      "text/plain": [
+       "[('3', '1'),\n",
+       " ('4', '3'),\n",
+       " ('4', '9'),\n",
+       " ('5', '3'),\n",
+       " ('5', '10'),\n",
+       " ('6', '1'),\n",
+       " ('7', '4'),\n",
+       " ('7', '5'),\n",
+       " ('9', '8'),\n",
+       " ('10', '8'),\n",
+       " ('11', '6'),\n",
+       " ('12', '11'),\n",
+       " ('2', 'l1_2_1'),\n",
+       " ('7', 'l1_7_8'),\n",
+       " ('12', 'l1_12_9'),\n",
+       " ('12', 'l1_12_10'),\n",
+       " ('l1_2_1', 'l2_2_1'),\n",
+       " ('l1_7_8', 'l2_7_8'),\n",
+       " ('l1_4_8', 'l2_4_8'),\n",
+       " ('l1_5_8', 'l2_5_8'),\n",
+       " ('l2_2_1', '1'),\n",
+       " ('l2_7_8', '8'),\n",
+       " ('l1_12_9', '9'),\n",
+       " ('l1_12_10', '10'),\n",
+       " ('l2_4_8', '8'),\n",
+       " ('l2_5_8', '8')]"
+      ]
+     },
+     "execution_count": 208,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
+    "def get_edges(edges, node):\n",
+    "    edge_list = []\n",
+    "    for edge in edges:\n",
+    "        source = edge[0]\n",
+    "        dest = edge[1]\n",
+    "        if source == node:\n",
+    "            edge_list.append(dest)\n",
+    "    return edge_list\n",
+    "\n",
+    "def get_layer_pos(matrix, element):\n",
+    "    '''Returns the layer and the position inside the layer of a certain element\n",
+    "    '''\n",
+    "    for layer, row in enumerate(matrix):\n",
+    "        for pos, value in enumerate(row):\n",
+    "            if value == element:\n",
+    "                return layer, pos \n",
+    "    return None #if it doesnt find the element\n",
+    "\n",
+    "def dummy(layers,edges):\n",
+    "    new_edges = edges\n",
+    "    layers_dict = {}\n",
+    "    for i,item in enumerate(layers):\n",
+    "        layers_dict[i] = item\n",
+    "\n",
+    "    #adding the dummies\n",
+    "    for layer in layers_dict:\n",
+    "        for node in layers_dict[layer]:\n",
+    "            #d_edge_list = get_edges(edges, node)\n",
+    "            for dest in get_edges(edges, node):\n",
+    "                step = 1\n",
+    "                while dest not in layers_dict[layer + step] :\n",
+    "                    #dummy = str('l'+str(layer+step)+'_'+node+'_'+dest)\n",
+    "                    layers[layer+step].append(str('l'+str(layer+step)+'_'+node+'_'+dest))\n",
+    "                    step += 1\n",
+    "\n",
+    "    dummies = [node for layer in layers for node in layer if node[0]=='l']\n",
+    "    max_layer = {dummy.split('_',1)[1]:0 for dummy in dummies}\n",
+    "    for dummy in dummies:\n",
+    "        max_layer[dummy.split('_',1)[1]]=get_layer_pos(layers,dummy.split('_')[2])[0]\n",
+    "\n",
+    "    #adding dummies' edges\n",
+    "    for node in dummies:\n",
+    "        #source -> first dummy\n",
+    "        if node[:2]== 'l1':\n",
+    "                source = node.split('_')[1]\n",
+    "                new_edges.append((source,node))\n",
+    "        \n",
+    "        #dummy -> dummy\n",
+    "        if node[0]== 'l' and node[1] != '1':\n",
+    "                source = str('l'+str(int(node.split('_')[0][1:])-1)+'_'+node.split('_',1)[1])\n",
+    "                new_edges.append((source,node))\n",
+    "        \n",
+    "    #dummy -> dest\n",
+    "    for edge in max_layer:\n",
+    "        new_edges.append((str('l'+str(int(max_layer[edge])-1)+'_'+edge),edge.split('_')[1])) #final dummy, final dest\n",
+    "        new_edges.remove((edge.split('_')[0], edge.split('_')[1])) #original source,final dest\n",
+    "             \n",
+    "    return layers,new_edges\n",
+    "\n",
+    "\n",
     "def tomas_layer_assignment(file):\n",
     "    '''Layer assignment with heigh Optimization\n",
     "    '''\n",
     "    nodes, edges, node_list, edge_list, weights = get_data(file)[0], get_data(file)[1], get_data(file)[2], get_data(file)[3], get_data(file)[4]\n",
     "    layers = []\n",
     "    S = [node for node in node_list if source_node(edge_list,node) == True]\n",
-    "    #print('original node list:',node_list)\n",
-    "    #print('original edge list:',edge_list)\n",
-    "    \n",
+    "\n",
+    "    e = edge_list\n",
     "    while S != []:\n",
-    "        #print('############')\n",
     "        layers.append(S)\n",
-    "        #print('S:',S)\n",
     "        del_edges = []\n",
     "        for node in S:\n",
-    "            new_edges = [edge for edge in edge_list if edge[0]==node]\n",
+    "            new_edges = [edge for edge in e if edge[0]==node]\n",
     "            for edge in new_edges:\n",
     "                del_edges.append(edge)\n",
-    "        #print('edges to delete:',del_edges)\n",
     "        for edge in del_edges:\n",
-    "            edge_list.remove(edge)\n",
+    "            e.remove(edge)\n",
     "        node_list = [node for node in node_list if node not in S]\n",
-    "        #print('node list:',node_list)\n",
-    "        S = [node for node in node_list if source_node(edge_list,node) == True]\n",
-    "        #print('S:',S)\n",
-    "    \n",
-    "    \n",
-    "    return layers\n",
-    "print(tomas_layer_assignment('heuristic_acyc.dot'))\n",
+    "        S = [node for node in node_list if source_node(e,node) == True]\n",
     "\n",
-    "# for i in range(1,len(layers)):\n",
-    "#     childs[node]\n",
-    "#     if one \n",
+    "    final_layers = dummy(layers,get_data(file)[3])\n",
     "\n",
-    "# for layer in layers:\n",
-    "#     for node in layers:\n",
-    "        #if there's am edge between node and another aone \n"
+    "    return final_layers[0],final_layers[1]\n",
+    "\n",
+    "ans = tomas_layer_assignment('heuristic_acyc.dot')\n",
+    "ans[1]"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3eeb599f",
+   "metadata": {},
+   "source": [
+    "### Cross Minimization"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 209,
    "id": "61340e05",
    "metadata": {},
    "outputs": [
@@ -2003,7 +2104,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "1\n"
      ]
     }
    ],
@@ -2026,7 +2127,7 @@
     "\n",
     "nodes, edges, node_list, edge_list, weights = get_data('heuristic_acyc.dot')[0], get_data('heuristic_acyc.dot')[1], get_data('heuristic_acyc.dot')[2], get_data('heuristic_acyc.dot')[3], get_data('heuristic_acyc.dot')[4]\n",
     "#print(edge_list)\n",
-    "print(c_uv('4','5',edge_list,['2', '7', '12']))\n",
+    "print(c_uv('6','9',edge_list, ['4', '5', '11']))\n",
     "\n",
     "\n",
     "\n",
@@ -2043,24 +2144,8 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "id": "e7b52243",
-   "metadata": {},
-   "source": [
-    "# Them"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "96bc1564",
-   "metadata": {},
-   "source": [
-    "# TRASH"
-   ]
-  },
-  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 210,
    "id": "6a759aad",
    "metadata": {},
    "outputs": [],
@@ -2145,7 +2230,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 211,
    "id": "cddc2563",
    "metadata": {},
    "outputs": [],
@@ -2217,7 +2302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 212,
    "id": "636cb1fb",
    "metadata": {},
    "outputs": [],
@@ -2290,7 +2375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 213,
    "id": "65bda85a",
    "metadata": {},
    "outputs": [],
@@ -2379,7 +2464,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 214,
    "id": "cf8c9b3b",
    "metadata": {},
    "outputs": [],
@@ -2468,7 +2553,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 215,
    "id": "631369e7",
    "metadata": {},
    "outputs": [],
@@ -2546,7 +2631,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 216,
    "id": "26d25421",
    "metadata": {},
    "outputs": [],
