cross min update 3

--- a/DV Project.ipynb
+++ b/DV Project.ipynb
@@ -1957,46 +1957,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 208,
+   "execution_count": 340,
    "id": "ed08eaa0",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[('3', '1'),\n",
-       " ('4', '3'),\n",
-       " ('4', '9'),\n",
-       " ('5', '3'),\n",
-       " ('5', '10'),\n",
-       " ('6', '1'),\n",
-       " ('7', '4'),\n",
-       " ('7', '5'),\n",
-       " ('9', '8'),\n",
-       " ('10', '8'),\n",
-       " ('11', '6'),\n",
-       " ('12', '11'),\n",
-       " ('2', 'l1_2_1'),\n",
-       " ('7', 'l1_7_8'),\n",
-       " ('12', 'l1_12_9'),\n",
-       " ('12', 'l1_12_10'),\n",
-       " ('l1_2_1', 'l2_2_1'),\n",
-       " ('l1_7_8', 'l2_7_8'),\n",
-       " ('l1_4_8', 'l2_4_8'),\n",
-       " ('l1_5_8', 'l2_5_8'),\n",
-       " ('l2_2_1', '1'),\n",
-       " ('l2_7_8', '8'),\n",
-       " ('l1_12_9', '9'),\n",
-       " ('l1_12_10', '10'),\n",
-       " ('l2_4_8', '8'),\n",
-       " ('l2_5_8', '8')]"
-      ]
-     },
-     "execution_count": 208,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "def get_edges(edges, node):\n",
     "    edge_list = []\n",
@@ -2034,29 +1998,39 @@
     "                    step += 1\n",
     "\n",
     "    dummies = [node for layer in layers for node in layer if node[0]=='l']\n",
-    "    max_layer = {dummy.split('_',1)[1]:0 for dummy in dummies}\n",
-    "    for dummy in dummies:\n",
-    "        max_layer[dummy.split('_',1)[1]]=get_layer_pos(layers,dummy.split('_')[2])[0]\n",
+    "    max_layer = {dummy.split('_',1)[1]:get_layer_pos(layers,dummy.split('_')[2])[0] for dummy in dummies} #{'2_1': 3, '7_8': 3, '12_9': 2, '12_10': 2, '4_8': 3, '5_8': 3}\n",
+    "    min_layer = {dummy.split('_',1)[1]:get_layer_pos(layers,dummy.split('_')[1])[0] for dummy in dummies} #{'2_1': 0, '7_8': 0, '12_9': 0, '12_10': 0, '4_8': 1, '5_8': 1}\n",
+    "    #print(min_layer)\n",
     "\n",
     "    #adding dummies' edges\n",
+    "    #print(dummies) #['l1_2_1', 'l1_7_8', 'l1_12_9', 'l1_12_10', 'l2_2_1', 'l2_7_8', 'l2_4_8', 'l2_5_8']\n",
     "    for node in dummies:\n",
-    "        #source -> first dummy\n",
-    "        if node[:2]== 'l1':\n",
-    "                source = node.split('_')[1]\n",
-    "                new_edges.append((source,node))\n",
+    "        layer = int(node.split('_',1)[0][1:])\n",
+    "        edge_ish = node.split('_',1)[1]\n",
     "        \n",
+    "        #source node -> first dummy\n",
+    "        if layer == int(1+min_layer[edge_ish]):# and layer != int(max_layer[edge_ish]-1):\n",
+    "            # print('MIN')\n",
+    "            # print('node:',node,'layer:',layer,'edge:',edge_ish,'min:',min_layer[edge_ish],'max:',max_layer[edge_ish])\n",
+    "            new_edges.append((node.split('_')[1],node)) #source, node: source ->node.split('_')[1]\n",
+    "        #last dummy -> dest\n",
+    "        if layer == int(max_layer[edge_ish]-1): #and layer != int(1+min_layer[edge_ish]):\n",
+    "            # print('MAX')\n",
+    "            # print('node:',node,'layer:',layer,'edge:',edge_ish,'min:',min_layer[edge_ish],'max:',max_layer[edge_ish])\n",
+    "            new_edges.append((node,node.split('_')[2])) #node, dest: dest ->node.split('_')[2]\n",
     "        #dummy -> dummy\n",
-    "        if node[0]== 'l' and node[1] != '1':\n",
-    "                source = str('l'+str(int(node.split('_')[0][1:])-1)+'_'+node.split('_',1)[1])\n",
-    "                new_edges.append((source,node))\n",
+    "        if layer > int(1+min_layer[edge_ish]):#!= int(1+min_layer[edge_ish]) or layer != int(max_layer[edge_ish]-1):\n",
+    "            #print('NONE')\n",
+    "            #print('node:',node,'layer:',layer,'edge:',edge_ish,'min:',min_layer[edge_ish],'max:',max_layer[edge_ish])\n",
+    "            source = str('l'+str(int(layer-1))+'_'+edge_ish) \n",
+    "            new_edges.append((source,node))\n",
     "        \n",
-    "    #dummy -> dest\n",
+    "    remove_edges = []\n",
     "    for edge in max_layer:\n",
-    "        new_edges.append((str('l'+str(int(max_layer[edge])-1)+'_'+edge),edge.split('_')[1])) #final dummy, final dest\n",
     "        new_edges.remove((edge.split('_')[0], edge.split('_')[1])) #original source,final dest\n",
+    "        remove_edges.append((edge.split('_')[0], edge.split('_')[1]))\n",
     "             \n",
     "    return layers,new_edges\n",
-    "\n",
     "\n",
     "def tomas_layer_assignment(file):\n",
     "    '''Layer assignment with heigh Optimization\n",
@@ -2083,7 +2057,7 @@
     "    return final_layers[0],final_layers[1]\n",
     "\n",
     "ans = tomas_layer_assignment('heuristic_acyc.dot')\n",
-    "ans[1]"
+    "#ans[1]"
    ]
   },
   {
@@ -2096,7 +2070,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 338,
    "id": "61340e05",
    "metadata": {},
    "outputs": [
@@ -2104,43 +2078,128 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1\n"
+      "['2', '7', '12']\n",
+      "#######2######\n",
+      "1 [('l1_2_1', 0.0), ('4', 1.0), ('5', 1.0), ('l1_7_8', 1.0), ('11', 2.0), ('l1_12_9', 2.0), ('l1_12_10', 2.0)]\n",
+      "2 [('l2_2_1', 0.0), ('l2_4_8', 1.0), ('3', 1.5), ('l2_5_8', 2.0), ('9', 3.0), ('l2_7_8', 3.0), ('6', 4.0), ('10', 4.0)]\n",
+      "###############\n",
+      "layers 4\n",
+      "#######3######\n",
+      "None\n"
      ]
     }
    ],
    "source": [
-    "def c_uv(u,v,edges,layer1):\n",
-    "    '''u and v are nodes from layer2, and we want to see the value of \n",
+    "def c_uv(u,v,edges,layer):\n",
+    "    '''u and v are nodes from layer i+1, and we want to see the number of crossing when we look at they're parents\n",
+    "    in layer i\n",
     "    '''\n",
-    "    u_parents = [(parent,layer1.index(parent)) for parent in layer1 if parent in parent_nodes(edges,u)[1]]\n",
-    "    v_parents = [(parent,layer1.index(parent)) for parent in layer1 if parent in parent_nodes(edges,v)[1]]\n",
-    "    \n",
+    "    u_parents = [(parent,layer.index(parent)) for parent in layer if parent in parent_nodes(edges,u)[1]]\n",
+    "    v_parents = [(parent,layer.index(parent)) for parent in layer if parent in parent_nodes(edges,v)[1]]\n",
     "    ans = 0\n",
     "    for u_parent in u_parents:\n",
     "        for v_parent in v_parents:\n",
-    "            if u_parent[0] != v_parent[0] and u_parent[1] > v_parent[1]:#do we need to check the first part? I dont think so\n",
+    "            if u_parent[0] != v_parent[0] and u_parent[1] > v_parent[1]:\n",
     "                ans += 1\n",
-    "\n",
-    "    # u_parents = [parent for parent in parent_nodes(edges,u)[1] if parent in layer1]\n",
-    "    # v_parents = [parent for parent in parent_nodes(edges,v)[1] if parent in layer1]\n",
     "    return ans#u_parents, v_parents\n",
     "\n",
     "nodes, edges, node_list, edge_list, weights = get_data('heuristic_acyc.dot')[0], get_data('heuristic_acyc.dot')[1], get_data('heuristic_acyc.dot')[2], get_data('heuristic_acyc.dot')[3], get_data('heuristic_acyc.dot')[4]\n",
     "#print(edge_list)\n",
-    "print(c_uv('6','9',edge_list, ['4', '5', '11']))\n",
+    "layers = tomas_layer_assignment('heuristic_acyc.dot')[0]\n",
+    "edge_list = tomas_layer_assignment('heuristic_acyc.dot')[1]\n",
+    "#print(c_uv('5','l1_2_1',edge_list, layers[0]))\n",
+    "\n",
+    "def cr(edges,layer1,layer2):\n",
+    "    '''Returns the total number of crossing between layer1 and layer2\n",
+    "    '''\n",
+    "    ans = 0\n",
+    "    for u in layer2:\n",
+    "        for v in layer2:\n",
+    "            if layer2.index(v)>layer2.index(u):\n",
+    "                ans+= c_uv(u,v,edges,layer1)\n",
+    "    return ans\n",
+    "\n",
+    "#print(cr(edge_list,layers[2],layers[3]))\n",
     "\n",
     "\n",
+    "def bary(node,edges,layers,layer):\n",
+    "    ans = 0\n",
+    "    parents = parent_nodes(edges,node)[1]\n",
+    "    #print('node-',node, 'parents',parents)\n",
+    "    for parent in parents:\n",
+    "        #print(layer.index(parent))\n",
+    "        #print(parent)\n",
+    "        ans+= int(layers[layer-1].index(parent))\n",
+    "    den = 1\n",
+    "    if len(parents) != 0:\n",
+    "        den = len(parents)\n",
+    "    return ans/den\n",
     "\n",
-    "\n",
+    "def it_cross_min(layers,edges,heur = 'Bary'):\n",
+    "    #1\n",
+    "    #random.shuffle(layers[0])\n",
+    "    print(layers[0])\n",
     "    \n",
+    "    \n",
+    "    if heur == 'Bary':\n",
+    "        print('#######2######')\n",
+    "        for i in range(1,len(layers)-1):\n",
+    "            #change layer_i\n",
+    "            \n",
+    "            layer_i =layers[i]\n",
+    "            barycenters = sorted([(node,bary(node,edges,layers,i)) for node in layer_i], key=lambda x: x[1])\n",
+    "            #sorted_list = sorted(list_of_lists\n",
+    "            #layer_i_1 =layers[i+1]\n",
+    "            print(i,barycenters)\n",
+    "            layers[i] = [node[0] for node in barycenters]\n",
+    "            #crs_2.append(cr(edges,layer_i,layer_i_1))\n",
+    "        print('###############')\n",
+    "        #3\n",
+    "        print('layers',len(layers))\n",
+    "        print('#######3######')\n",
+    "        for i in range(1,len(layers)-1,-1):\n",
+    "            layer_i =layers[i]\n",
+    "            print(i)\n",
+    "            #change layer_i_1\n",
+    "            #layer_i_1 =layers[i+1]\n",
+    "            barycenters = sorted([(node,bary(node,edges,layers,i)) for node in layer_i], key=lambda x: x[1])\n",
+    "            print(i,barycenters)\n",
+    "            layers[i] = [node[0] for node in barycenters]\n",
+    "            #crs_2.append(cr(edges,layer_i,layer_i_1))\n",
     "\n",
     "\n",
+    "# print(layers)\n",
+    "# print(edge_list)\n",
+    "print(it_cross_min(layers,edge_list) )\n",
     "\n",
-    "\n",
-    "# def crossing_min(file):\n",
-    "#     layers = tomas_layer_assignment(file)\n",
-    "#     for i in range(1,len(layers)):\n",
     "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 292,
+   "id": "dc03c9e1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Randomly reordered list: [1, 2, 4, 5, 3]\n"
+     ]
+    }
+   ],
+   "source": [
+    "import random\n",
+    "\n",
+    "# Original list\n",
+    "original_list = [1, 2, 3, 4, 5]\n",
+    "\n",
+    "# Randomly reorder the list\n",
+    "random.shuffle(original_list)\n",
+    "\n",
+    "# Print the randomly reordered list\n",
+    "print(\"Randomly reordered list:\", original_list)\n"
    ]
   },
   {
