--- a/t-sne.ipynb
+++ b/t-sne.ipynb
@@ -74,6 +74,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Similarity Matrix"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 4,
    "metadata": {},
@@ -200,6 +207,13 @@
     "    for j in range(len(node_list)):\n",
     "        print(\"{:.2f}\".format(similarity_matrix[i, j]), \"\\t\", end=\"\")\n",
     "    print()\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# T-SNE"
    ]
   },
   {
@@ -27916,6 +27930,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# MDS\n"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 61,
    "metadata": {},
@@ -41794,6 +41815,13 @@
     "        fig.show()\n",
     "\n",
     "plot_mds(similarity_matrix, node_list, edge_list, n_components=3, interactive=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# ISOMAP"
    ]
   },
   {
