distance matrix done

--- a/Step1.ipynb
+++ b/Step1.ipynb
@@ -32,7 +32,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,7 +52,7 @@
     "    weights = {}\n",
     "    if edges[0].get_attributes()!={}:\n",
     "        name= str(list(edges[0].get_attributes().keys())[0])\n",
-    "        weights = {(edge.get_source(), edge.get_destination()):int(edge.get_attributes()[name]) for edge in edges}\n",
+    "        weights = {(edge.get_source(), edge.get_destination()):int(edge.get_attributes()[name].strip('\"')) for edge in edges}\n",
     "\n",
     "    return nodes,edges,node_list,edge_list,weights\n",
     "\n"
@@ -352,7 +352,15 @@
    "name": "python3"
   },
   "language_info": {
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
    "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
    "version": "3.8.8"
   }
  },
